--- a/app/web/views/background.html
+++ b/app/web/views/background.html
@@ -26,8 +26,7 @@
                             <% backgrounds.forEach(function(background, backgroundIndex){ %>
                             <div class="col m3">
                                 <div class="card">
-                                    <div class="image-container" style="background-image: url('<%= background.image %>')">
-                                    </div>
+                                    <div class="image-container" style="background-image: url('<%= background.image %>')"></div>
                                 </div>
                                 <p>
                                     <label>
