--- a/app/web/views/customer_info.html
+++ b/app/web/views/customer_info.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="card-action right-align">
-                        <a class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
+                        <a href="/photo_upload/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
                         <a class="waves-effect waves-light-3 grey lighten-3 black-text btn btn-next">Siguiente</a>
                     </div>
                 </div>
