--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
                                 <p>
                                     <label>
                                         <input class="with-gap primary-color" name="typography" type="radio" value="<%= typography.id %>" 
-                                        <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %>checked<% } %> />
+                                        <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %> checked <% } %> />
                                         <span><%= typography.name %></span>
                                     </label>
                                 </p>
