--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -74,7 +74,7 @@
 
                     </div>
                     <div class="card-action right-align">
-                        <a class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
+                        <a href="/typography/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
                         <a class="waves-effect waves-light-3 grey lighten-3 black-text btn confirm-upload disabled">Siguiente</a>
                     </div>
                 </div>
