--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -13,7 +13,7 @@
     <div class="background-header"></div>
     <div class="content">
         <div class="row">
-            <div class="col m8 offset-m2">
+            <div class="col s12 col m8 offset-m2">
                 <div class="card">
                     <div class="card-content">
                         <h4>Nuevo Pedido</h4>
@@ -21,20 +21,22 @@
                         <br>
                         <h5>Agrega texto! (+$20)</h5>
                         <p>Podes agregar un texto personalizado y selecciona la tipografía que quieras que aparezcan en el pie de tus fotos (+$20)</p>
+                        <h6>Seleccioná la tipografía <span class="required">*</span></h6>
                         <div class="row">
-                            <h6 class="col m12">Seleccioná la tipografía <span class="required">*</span></h6>
                             <% typographies.forEach(function(typography, typographyIndex){ %>
-                            <div class="col m3">
-                                <div class="card">
-                                    <div class="image-container" style="background-image: url('<%= typography.image %>')"></div>
+                            <div class="col s6 m3">
+                                <div class="selectable-item">
+                                    <div class="card">
+                                        <div class="image-container" style="background-image: url('<%= typography.image %>')"></div>
+                                    </div>
+                                    <p>
+                                        <label>
+                                            <input class="with-gap primary-color" name="typography" type="radio" value="<%= typography.id %>" 
+                                            <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %> checked <% } %> />
+                                            <span><%= typography.name %></span>
+                                        </label>
+                                    </p>
                                 </div>
-                                <p>
-                                    <label>
-                                        <input class="with-gap primary-color" name="typography" type="radio" value="<%= typography.id %>" 
-                                        <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %> checked <% } %> />
-                                        <span><%= typography.name %></span>
-                                    </label>
-                                </p>
                             </div>
                             <% }); %>
                         </div>
@@ -49,7 +51,7 @@
                         </div>
                     </div>
                     <div class="card-action right-align">
-                        <a class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
+                        <a href="/background/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
                         <a class="waves-effect waves-light-3 grey lighten-3 black-text btn btn-next">Siguiente</a>
                     </div>
                 </div>
@@ -59,6 +61,7 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
+<script src="/js/base.js"></script>
 <script src="/js/services/orderService.js"></script>
 <% if (order) { %> 
 <script>
