--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -86,6 +86,10 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     background-position: center;
 }
 
+.card > .image-container.selected {
+    border: 2px solid rgb(135, 118, 40);
+}
+
 .detail-image-container {
     height: 0;
     width: 50%;
